--- a/08reactrouterproject/package.json
+++ b/08reactrouterproject/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "07currencyconverter",
+  "name": "08reactrouterproject",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,16 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/fiber": "^9.1.0",
-    "@tailwindcss/vite": "^4.0.15",
-    "@types/three": "^0.174.0",
-    "clsx": "^2.1.1",
-    "motion": "^12.5.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.15",
-    "three": "^0.174.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
